@@ -9,38 +9,20 @@
 # Data de atualização: 18/10/2021
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
-# Testado e homologado para a versão do
+# Testado e homologado para a versão do Apache2 v2.4.x
 
-#Configuração do Virtual Host padrão do Apache na porta 80
+# Configuração do Virtual Host padrão do Apache na porta 80
 <VirtualHost *:80>
 	
-	#Email do administrador
+	# Email do administrador do Apache2
 	ServerAdmin webmaster@pti.intra
 	
-	#Pasta raiz da hospedagem
+	# Diretório raiz da hospedagem de sites no Apache2
 	DocumentRoot /var/www/html
 	
-	#Configuração dos arquivos de log
+	# Configuração dos arquivos de Log do Apache2
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 	
-	#Configuração dos alias do software AWStats (estátisticas do apache)
-	Alias /awstatsclasses "/usr/share/awstats/lib/"
-	Alias /awstats-icon "/usr/share/awstats/icon/"
-	Alias /awstatscss "/usr/share/doc/awstats/examples/css"
-	
-	#Configuração do alias de script CGI
-	ScriptAlias /cgi-bin/ /usr/lib/cgi-bin/
-	ScriptAlias /awstats/ /usr/lib/cgi-bin/
-	Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
-	
-	#Subdiretório das configurações do AWStats
-	<Directory "/usr/local/awstats/wwwroot">
-		Options None
-		AllowOverride None
-		Order allow,deny
-		Allow from all
-	</Directory>
-
 </VirtualHost>
 # vim: syntax=apache ts=4 sw=4 sts=4 sr noet
