@@ -1,0 +1,27 @@
+# Autor: Robson Vaamonde
+# Site: www.procedimentosemti.com.br
+# Facebook: facebook.com/ProcedimentosEmTI
+# Facebook: facebook.com/BoraParaPratica
+# YouTube: youtube.com/BoraParaPratica
+# Linkedin: https://www.linkedin.com/in/robson-vaamonde-0b029028/
+# Instagram: https://www.instagram.com/procedimentoem/?hl=pt-br
+# Data de criação: 20/10/2021
+# Data de atualização: 20/10/2021
+# Versão: 0.01
+# Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64x
+
+# Configurações do Apache2 para suportar somente endereços IPv4
+
+# Configuração da Porta Padrão HTTP do Apache2 utilizar IPv4 e Porta 80
+Listen 0.0.0.0:80
+
+# Configuração do Bloco da Porta Padrão HTTPS do Apache2 utilizar IPv4 e Porta 443
+<IfModule ssl_module>
+        Listen 0.0.0.0:443
+</IfModule>
+
+<IfModule mod_gnutls.c>
+        Listen 0.0.0.0:443
+</IfModule>
+
+# vim: syntax=apache ts=4 sw=4 sts=4 sr noet
